added global styles

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="mat-typography mat-app-background">
   <app-root>
-    <div class="loader">Loading Application</div>
+    <div class="app-loader">Loading Application</div>
   </app-root>
 </body>
 </html>
