--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,15 @@
 </head>
 <body class="mat-typography mat-app-background">
   <app-root>
-    <div class="app-loader">Loading Application</div>
+    <div class="app-loader">
+      <div class="lds-ring">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      Loading Application
+    </div>
   </app-root>
 </body>
 </html>
